--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -549,7 +549,7 @@ background-color:rgba(0,0,0,0.09);
 			padding:8px 15px;
 			font-size:14px;
 			font-weight: 400;
-			vertical-align:middle;
+			/* vertical-align:middle; */
 		}
 		
 		table.table tr th:first-child{
@@ -581,8 +581,8 @@ background-color:rgba(0,0,0,0.09);
 	   }
 	   
 	   table.table td a{
-		   font-weight:bold;
-		   color:#566787;
+		   /* font-weight:bold; */
+		   /* color:#566787; */
 		   display:inline-block;
 		   text-decoration:none;
 		   outline:none!important;
