--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -2,13 +2,34 @@ body,html{
 	line-height:1.8;
 	font-family:'Poppins',sans-serif;
 	color:#555e58;
-	text-transform:capitalize;
+	text-transform:normal;
 	font-weight:400;
 	margin:0px;
 	padding:0px;
 }
 
+/* BUTTON 3 */
+.btnadd {
+	background-color: #3DB16F; /* Replace with your desired background color */
+	border-radius: 5px; /* Adjust the border radius value as needed */
+	height: 40px; /* Adjust the height value as needed */
+	/* Add any other desired styles */
+	padding-left: 5px;
+	padding-top: 5px;
+	padding-right: 15px;
+  }
+.btn3 {
+	background: rgba(2, 74, 162, 1);
 
+  color:white; /* Replace with your desired text color */
+  border: none;
+  border-radius:30px;
+  padding: 4px 20px;
+  font-weight: bold;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2); /* Replace with your desired box shadow */
+  }
 /*==========================================================
   material-icon font-style
   ================================*/
@@ -120,7 +141,8 @@ overflow:auto;
 	  width:350.41px;
 	  overflow:auto;
 	  transition:all 0.3s;
-	  background-color:#031C30;
+	  background: rgba(10, 68, 138, 1);
+
 	  box-shadow:0 0 30px 0 rgba(200 200 200 / 20%);
   }
   
@@ -176,7 +198,8 @@ overflow:auto;
   #sidebar .sidebar-header{
   	margin-left: 16px;
 	  padding:20px;
-	  background-color:#031C30;
+	  background: rgba(10, 68, 138, 1);
+
 /*	  border-bottom:1px solid #eee;*/
   }
   
@@ -278,13 +301,15 @@ overflow:auto;
   z-index: 9;
   position: relative;
   padding: 10px 20px;
-  background-color: rgba(3, 28, 48, 1);
+  background: rgba(10, 68, 138, 1);
+
+
   transition: all 0.3s;
   box-sizing: border-box;
   margin-left: 93px; /* add left margin equal to the width of the sidenav */
 }
 
-	 }
+	 
 	 
 	 .xd-topbar{
 		 width:100%;
@@ -292,7 +317,7 @@ overflow:auto;
 	 }
 	 
 	 input[type="search"]{
-		 background-color:#4a5263;
+		 background-color:white;
 		 color:#fff;
 		 padding-left:20px;
 		 border:none;
@@ -347,7 +372,9 @@ overflow:auto;
 	   }
 	   
 	   .navbar{
-		   background-color:#031C30;
+		background: rgba(10, 68, 138, 1);
+
+
 		   color:#fff;
 	   }
 	   
@@ -504,7 +531,9 @@ background-color:rgba(0,0,0,0.09);
 }
 	   
 	   .table-title{
-		   background:rgba(3, 28, 48, 1);
+		background: rgba(10, 68, 138, 1);
+
+
 		   color:#fff;
 		   position:sticky;
 		   top:0;
@@ -721,7 +750,7 @@ background-color:rgba(0,0,0,0.09);
 		   padding:20px 30px;
 	   }
 	   .modal .modal-content{
-		   border-radius:3px;
+		   border-radius:0px;
 	   }
 	   
 	   .modal .modal-footer{
@@ -748,10 +777,10 @@ background-color:rgba(0,0,0,0.09);
 			  min-width:100px;
 		  }
 		  
-		  .modal form label{
+		  /* .modal form label{
 			  font-weight:normal;
 		  }
-		  
+		   */
 		  
 		  
 		  
