ANNOUNCEMENTS PAGE MODALS AND BUTTON UPDATED /DONE

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,7 +1,7 @@
 body,html{
 	line-height:1.8;
 	font-family:'Poppins',sans-serif;
-	color:#555e58;
+	color:black;
 	text-transform:normal;
 	font-weight:400;
 	margin:0px;
